--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -85,7 +85,7 @@
 							<!-- Default stream component if custom component is not injected -->
 							<!-- We must to bind a context for the 'participant' input property -->
 							<ng-template #defaultStream>
-								<ov-stream [participant]="stream"></ov-stream>
+								<ov-stream [stream]="stream"></ov-stream>
 							</ng-template>
 						</ng-template>
 					</ov-layout>
