--- a/openvidu-components-angular/src/app/components/stream-test/stream-test.component.html
+++ b/openvidu-components-angular/src/app/components/stream-test/stream-test.component.html
@@ -31,7 +31,7 @@
 
 <div id="stream-test-container">
 
-	<ov-stream [participant]="participant"></ov-stream>
+	<ov-stream [stream]="stream"></ov-stream>
 </div>
 
 
