--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/videoconference/videoconference.component.html
@@ -15,83 +15,54 @@
 
 	<div id="session-container" *ngIf="joinSessionClicked && isSessionAlive && !error">
 		<ov-session [tokens]="_tokens">
+			<ng-content select="[toolbar]" toolbar></ng-content>
 
-			<!-- Toolbar container injection -->
-			<ng-template #toolbar>
-				<!-- Custom toolbar -->
-				<ng-container *ngIf="toolbarTemplate; else defaultToolbar">
-					<ng-container *ngTemplateOutlet="toolbarTemplate"></ng-container>
-				</ng-container>
-
-					<!-- Default toolbar if custom toolbar is not injected -->
-				<ng-template #defaultToolbar>
-					<ov-toolbar></ov-toolbar>
-				</ng-template>
-
-			</ng-template>
-
-			<ng-template #panel>
+			<!-- OPENVIDU PANEL -->
+			<span #panelRef panel>
 				<!-- Custom panel -->
-				<ng-container *ngIf="panelTemplate; else defaultPanel">
-					<ng-container *ngTemplateOutlet="panelTemplate"></ng-container>
-				</ng-container>
+				<ng-content select="[panel]"></ng-content>
+			</span>
 
-				<!-- Default panel if custom panel is not injected -->
-				<ng-template #defaultPanel>
-					<ov-panel>
-						<!-- CHAT panel -->
-						<ng-template #chatPanel>
-							<ng-container *ngIf="chatPanelTemplate; else defaultChatPanel">
-								<ng-container *ngTemplateOutlet="chatPanelTemplate"></ng-container>
-							</ng-container>
+			<!-- Default panel if the custom one is not injected -->
+			<ov-panel *ngIf="panelRef.childNodes.length === 0" panel>
+				<span #chatPanelRef chatPanel>
+					<!-- Custom CHAT panel -->
+					<ng-content select="[chatPanel]"></ng-content>
+				</span>
 
-							<ng-template #defaultChatPanel>
-								<ov-chat-panel></ov-chat-panel>
-							</ng-template>
-						</ng-template>
+				<!-- Default CHAT PANEL if the custom one is not injected -->
+				<ov-chat-panel *ngIf="chatPanelRef.childNodes.length === 0" chatPanel></ov-chat-panel>
 
-						<!-- PARTICIPANTS panel -->
-						<ng-template #participantsPanel>
-							<ng-container *ngIf="participantsPanelTemplate; else defaultParticipantsPanel">
-								<ng-container *ngTemplateOutlet="participantsPanelTemplate"></ng-container>
-							</ng-container>
-							<ng-template #defaultParticipantsPanel>
-								<ov-participants-panel></ov-participants-panel>
-							</ng-template>
-						</ng-template>
-					</ov-panel>
-				</ng-template>
+				<span #participantsPanelRef participantsPanel>
+					<!-- Custom PARTICIPANTS panel -->
+					<ng-content select="[participantsPanel]"></ng-content>
+				</span>
 
-			</ng-template>
+				<!-- Default PARTICIPANTS PANEL if the custom one is not injected -->
+				<ov-participants-panel *ngIf="participantsPanelRef.childNodes.length === 0" participantsPanel></ov-participants-panel>
+			</ov-panel>
 
-
-			<!-- Layout container injection -->
 			<ng-template #layout>
 				<!-- Custom layout -->
-				<ng-container *ngIf="layoutTemplate; else defaultLayout">
-					<ng-container *ngTemplateOutlet="layoutTemplate"></ng-container>
-				</ng-container>
+				<span #layoutRef layout>
+					<ng-content select="[layout]"></ng-content>
+				</span>
 
 				<!-- Default layout if custom layout is not injected -->
-				<ng-template #defaultLayout>
-					<ov-layout>
-						<ng-template #stream let-stream="stream">
-							<!-- Custom stream component -->
-							<!-- We must to bind a context for the 'participant' input property -->
-							<ng-container *ngIf="streamTemplate; else defaultStream">
-								<ng-container *ngTemplateOutlet="streamTemplate;context:{stream:stream}"></ng-container>
-							</ng-container>
+				<ov-layout *ngIf="layoutRef.childNodes.length === 0" layout>
+					<ng-template #stream let-stream>
+						<!-- Custom stream component -->
+						<ng-container *ngIf="streamTemplate; else defaultStream">
+							<ng-container *ngTemplateOutlet="streamTemplate; context: { $implicit: stream }"> </ng-container>
+						</ng-container>
 
-							<!-- Default stream component if custom component is not injected -->
-							<!-- We must to bind a context for the 'participant' input property -->
-							<ng-template #defaultStream>
-								<ov-stream [stream]="stream"></ov-stream>
-							</ng-template>
+						<!-- Default stream component if custom one is not injected -->
+						<ng-template #defaultStream>
+							<ov-stream [stream]="stream"></ov-stream>
 						</ng-template>
-					</ov-layout>
-				</ng-template>
+					</ng-template>
+				</ov-layout>
 			</ng-template>
-
 		</ov-session>
 	</div>
 </div>
