--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -1,61 +1,22 @@
-<!-- <div id="call-container">
-	<div id="userSettings" *ngIf="!joinSessionClicked && !closeClicked || !isSessionAlive">
-		<ov-user-settings (onJoinClicked)="onJoinClicked()" (onCloseClicked)="onCloseClicked()"></ov-user-settings>
-	</div>
-
-	<div *ngIf="joinSessionClicked && isSessionAlive" style="height: 100%;">
-		<ov-session [tokens]="tokens">
-			<ng-template #toolbar>
-				<ov-toolbar
-					(onCamClicked)="onCamClicked()"
-					(onMicClicked)="onMicClicked()"
-					(onScreenShareClicked)="onScreenShareClicked()"
-					(onSpeakerLayoutClicked)="onSpeakerLayoutClicked()"
-					(onLeaveSessionClicked)="onLeaveSessionClicked()"
-				></ov-toolbar>
-			</ng-template>
-			<ov-layout layout></ov-layout>
-		</ov-session>
-	</div>
-</div> -->
 
 <ov-videoconference (onJoinClicked)="onJoinClicked()" [tokens]="tokens">
 
-	<!-- <ng-template #toolbar>
-		<ov-toolbar postion="top" (onCamClicked)="onCamClicked()"></ov-toolbar>
-	</ng-template> -->
 
-	<!-- <ng-template #layout>
-		<ov-toolbar postion="top" (onCamClicked)="onCamClicked()"></ov-toolbar>
-	</ng-template> -->
+	<!-- <ov-toolbar toolbar (onCamClicked)="onCamClicked()"></ov-toolbar> -->
 
 
-	<!-- <ng-template #panel>
-		<ov-toolbar postion="top" (onCamClicked)="onCamClicked()"></ov-toolbar>
-	</ng-template> -->
+	<!-- <ov-toolbar panel (onCamClicked)="onCamClicked()"></ov-toolbar> -->
+	<!-- <ov-toolbar chatPanel (onCamClicked)="onCamClicked()"></ov-toolbar> -->
+	<!-- <ov-toolbar participantsPanel (onCamClicked)="onCamClicked()"></ov-toolbar> -->
 
-	<!-- <ng-template #chatPanel>
-		<ov-toolbar postion="top" (onCamClicked)="onCamClicked()"></ov-toolbar>
-	</ng-template> -->
 
-	<!-- <ng-template #participantsPanel>
-		<ov-toolbar postion="top" (onCamClicked)="onCamClicked()"></ov-toolbar>
-	</ng-template> -->
+	<!-- <ov-toolbar layout (onCamClicked)="onCamClicked()"></ov-toolbar> -->
 
-	<!-- <ng-template #stream let-stream="stream">
+	<!-- <div *ovStream="let stream">
 
-		<ov-stream postion="top" [stream]="stream">
-			<button network-quality> hola</button>
-			<ng-template #notification>
-				<button  mat-icon-button id="hand-notification" *ngIf="stream.videoEnlarged">
-					<mat-icon>front_hand</mat-icon>
-				</button>
-
-			</ng-template>
-		</ov-stream>
-
-	</ng-template> -->
-
+		<p>{{stream.videoEnlarged}}</p>
+		<ov-stream [stream]="stream"></ov-stream>
+	</div> -->
 
 
 </ov-videoconference>
