--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -30,6 +30,13 @@
 	padding: 10px;
   }
 
+  #audio-wave-container {
+	position: absolute;
+    right: 0;
+    z-index: 1;
+    padding: 5px;
+  }
+
   .fullscreen {
 	top: 40px;
   }
