--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
@@ -22,12 +22,12 @@
 							<mat-spinner></mat-spinner>
 						</div>
 						<div class="videoContainer" *ngIf="!isLoading">
-							<div *ngFor="let stream of localParticipant | connections">
+							<div *ngFor="let stream of localParticipant | streams">
 								<!-- Only webcam video will be shown if webcamera is available -->
 								<ov-video
 									*ngIf="(stream.type === 'CAMERA' && hasVideoDevices) || stream.type === 'SCREEN'"
 									[streamManager]="stream.streamManager"
-									[ngClass]="{ ovVideoSmall: localParticipant.connections.size > 1 && stream.type === 'CAMERA' }"
+									[ngClass]="{ ovVideoSmall: localParticipant.streams.size > 1 && stream.type === 'CAMERA' }"
 								></ov-video>
 								<div class="cameraMessageContainer" *ngIf="stream.type === 'CAMERA' && !hasVideoDevices">
 									<span *ngIf="!hasVideoDevices && !hasAudioDevices">Oops! Camera and microphone are not available</span>
