openvidu-components: Added participant input in participant item

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
@@ -1,8 +1,8 @@
 <mat-list>
 	<mat-list-item>
 		<mat-icon matListAvatar class="participant-avatar">person</mat-icon>
-		<h3 matLine class="participant-nickname">{{ name }}</h3>
-		<p matLine class="participant-subtitle">{{ connections }}</p>
+		<h3 matLine class="participant-nickname">{{ participant | nickname }}</h3>
+		<p matLine class="participant-subtitle">{{ participant | streamsEnabled }}</p>
 		<!-- <p matLine>
 			<span class="participant-subtitle"></span>
 		</p> -->
