--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
@@ -10,19 +10,17 @@
 
 		<div class="local-participant-container">
 			<ov-participant-panel-item
-				[name]="localParticipant | nickname"
-				[connections]="localParticipant | streamsEnabled"
+				[participant]="localParticipant"
 				[showDividerLine]="true"
 			></ov-participant-panel-item>
 		</div>
 
 		<div class="remote-participants-container" *ngIf="remoteParticipants.length > 0">
-			<ov-participant-item
-				*ngFor="let p of remoteParticipants; let lastItem = last"
-				[name]="p | nickname"
-				[connections]="p | streamsEnabled"
+			<ov-participant-panel-item
+				*ngFor="let participant of remoteParticipants; let lastItem = last"
+				[participant]="participant"
 				[showDividerLine]="!lastItem"
-			></ov-participant-item>
+			></ov-participant-panel-item>
 		</div>
 
 	</div>
