Fix wrong object in openvidu-java-client. Add e2e tests for customIceServers connection property in openvidu-java-client and openvidu-node-client

--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.css
@@ -39,3 +39,12 @@ mat-dialog-content button {
   top: 0;
   right: 0;
 }
+
+#manual-turn-div {
+  background-color: #f7f7f7;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 1px solid #00000026;
+  border-radius: 3px;
+}
