--- a/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
+++ b/openvidu-testapp/src/app/components/dialogs/session-api-dialog/session-api-dialog.component.html
@@ -31,6 +31,27 @@
       </mat-form-field>
     </div>
     <div>
+      <mat-form-field class="inner-text-input" [style.fontSize.px]=14 style="width:33%">
+        <mat-label>Custom Ice Servers</mat-label>
+        <mat-select [(ngModel)]="numCustomIceServers" id="num-ice-servers-select" (selectionChange)="changedNumIceServers(numCustomIceServers)">
+          <mat-option *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10]" [value]="i">
+            <span [attr.id]="'num-ice-servers-' + i">{{ i }}</span>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+        <div id="manual-turn-div" *ngFor="let configuredIce of configuredCustomIceServers; let i = index">
+          <mat-form-field style="width: 100%">
+            <input matInput id="ice-server-url-{{i}}" placeholder="url" type="text" [(ngModel)]="configuredIce.url">
+          </mat-form-field>
+          <mat-form-field style="width: 48%; padding-right: 2px">
+            <input matInput id="ice-server-username-{{i}}" placeholder="username" type="text" [(ngModel)]="configuredIce.username">
+          </mat-form-field>
+          <mat-form-field style="width: 48%; padding-left: 2px">
+            <input matInput id="ice-server-credential-{{i}}" placeholder="credential" type="text" [(ngModel)]="configuredIce.credential">
+          </mat-form-field>
+      </div>
+    </div>
+    <div>
       <button mat-button id="crate-connection-api-btn" (click)="createConnection()">Create connection</button>
       <button mat-button id="update-connection-api-btn" (click)="updateConnection()" [disabled]="!connectionId">Update
         connection</button>
