openvidu-components: Improved components cutomization
Custom structural directives have been added for improving the components customization. 
These improvements now allow add custom child components inside of a custom parent component.
 Besides, the conditional logic has been moved from view to model for improving maintainability

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/panel.component.html
@@ -1,6 +1,12 @@
 <!-- CHAT panel -->
-<ng-content select="[chatPanel]" *ngIf="isChatPanelOpened"></ng-content>
+<ng-container *ngIf="isChatPanelOpened">
+	<ng-container *ngTemplateOutlet="chatPanelTemplate"></ng-container>
+</ng-container>
+
 
 <!-- PARTICIPANTS panel -->
-<ng-content select="[participantsPanel]"  *ngIf="isParticipantsPanelOpened"></ng-content>
+<ng-container *ngIf="isParticipantsPanelOpened">
+	<ng-container *ngTemplateOutlet="participantsPanelTemplate"></ng-container>
+</ng-container>
+
 
