--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participant-panel-item/participant-panel-item.component.html
@@ -1,11 +1,10 @@
 <mat-list>
 	<mat-list-item>
 		<mat-icon matListAvatar class="participant-avatar">person</mat-icon>
-		<h3 matLine class="participant-nickname">{{ participant | nickname }}</h3>
-		<p matLine class="participant-subtitle">{{ participant | streamsEnabled }}</p>
+		<h3 matLine class="participant-nickname">{{ _participant | nickname }}</h3>
+		<p matLine class="participant-subtitle">{{ _participant | streamsEnabled }}</p>
 		<!-- <p matLine>
 			<span class="participant-subtitle"></span>
 		</p> -->
 	</mat-list-item>
-	<mat-divider *ngIf="showDividerLine"></mat-divider>
 </mat-list>
