--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.html
@@ -48,17 +48,17 @@
 										(click)="toggleCam()"
 										class="deviceButton"
 										id="configCardCameraButton"
-										[class.warn-btn]="!isVideoActive"
+										[class.warn-btn]="isVideoMuted"
 									>
-										<mat-icon *ngIf="isVideoActive" matTooltip="Camera Enabled">videocam</mat-icon>
-										<mat-icon *ngIf="!isVideoActive" matTooltip="Camera Disabled">videocam_off</mat-icon>
+										<mat-icon *ngIf="!isVideoMuted" matTooltip="Camera Enabled">videocam</mat-icon>
+										<mat-icon *ngIf="isVideoMuted" matTooltip="Camera Disabled">videocam_off</mat-icon>
 									</button>
 								</div>
 								<div class="two" fxFlex="80" fxLayoutAlign="center center">
 									<mat-form-field class="alternate-theme">
 										<mat-select
 											placeholder="Camera Options"
-											[ngModel]="isVideoActive && !!cameraSelected ? cameraSelected.device : 'None'"
+											[ngModel]="!isVideoMuted && !!cameraSelected ? cameraSelected.device : 'None'"
 											(selectionChange)="onCameraSelected($event)"
 										>
 											<mat-option *ngFor="let camera of cameras" [value]="camera.device">
@@ -78,17 +78,17 @@
 										(click)="toggleMic()"
 										class="deviceButton"
 										id="configCardMicrophoneButton"
-										[class.warn-btn]="!isAudioActive"
+										[class.warn-btn]="isAudioMuted"
 									>
-										<mat-icon *ngIf="isAudioActive" matTooltip="Microphone Enabled">mic</mat-icon>
-										<mat-icon *ngIf="!isAudioActive" matTooltip="Microphone Disabled">mic_off</mat-icon>
+										<mat-icon *ngIf="!isAudioMuted" matTooltip="Microphone Enabled">mic</mat-icon>
+										<mat-icon *ngIf="isAudioMuted" matTooltip="Microphone Disabled">mic_off</mat-icon>
 									</button>
 								</div>
 								<div class="two" fxFlex="80" fxLayoutAlign="center center">
 									<mat-form-field class="alternate-theme">
 										<mat-select
 											placeholder="Microphone Options"
-											[ngModel]="isAudioActive && microphoneSelected ? microphoneSelected.device : 'None'"
+											[ngModel]="!isAudioMuted && microphoneSelected ? microphoneSelected.device : 'None'"
 											(selectionChange)="onMicrophoneSelected($event)"
 										>
 											<mat-option *ngFor="let microphone of microphones" [value]="microphone.device">
