openvidu-components: Minor styles changes

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/layout/layout.component.css
@@ -3,14 +3,17 @@
 }
 
 
-.bounds {
-	position: absolute;
+.layout {
+	position: relative;
 	left: 0;
 	right: 0;
 	top: 0;
 	bottom: 0;
 	min-width: 350px !important;
+	min-height: 100%;
 	width: inherit;
+	height: -webkit-fill-available;
+	height: -moz-available;
 }
 
   /*!
