--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/session/session.component.css
@@ -6,8 +6,8 @@
 
 .sidenav-container {
 	position: relative;
-	height: calc(100% - 80px);
-	min-height: calc(100% - 80px);
+	height: calc(100% - 70px);
+	min-height: calc(100% - 70px);
 	padding-top: 10px;
 	width: 100%;
 	overflow: hidden;
@@ -30,6 +30,11 @@
 	min-height: -moz-available;
 }
 
+#layout-container {
+	height: inherit;
+	width: inherit;
+}
+
 .mat-drawer-container {
 	background-color: var(--ov-primary-color);
 }
@@ -38,7 +43,7 @@
 	background-color: var(--ov-primary-color);
 	min-width: 400px !important;
 	width: 100%;
-	height: 60px;
+	height: 70px;
 }
 
 #footer {
