openvidu-components: Fixed layout bug.
The layout has a bad UX. The root element is created with the entire layout width and it has a weird UX behaviour. Custom class with no width and height has been added and removed dynamically when stream container is present.

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/stream/stream.component.css
@@ -1,3 +1,10 @@
+   /* Fixes layout bug. The OT_root is created with the entire layout width and it has a weird UX behaviour */
+   .no-size {
+	height: 0px !important;
+	width: 0px !important;
+  }
+
+
 .nickname {
 	padding: 0px;
 	position: absolute;
